# CSocketProgrammingPractice3

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh
docs/others/: Behavior_of_read_and_write_for_sockets.md
docs/src/: simple_broadcast.md  simple_tcp.md
lib/: CMakeLists.txt
lib/my_library/: CMakeLists.txt  common_port.h  die_with_system_message.c  die_with_system_message.h  directory.c  directory.h  get_socket_address.c  get_socket_address.h  handle_error.c  handle_error.h  handle_socket_address.c  handle_socket_address.h  presentation_layer.c  presentation_layer.h  print_socket_address.c  print_socket_address.h
src/: CMakeLists.txt
src/FileServer/: CMakeLists.txt  client.c  client_nr.c  protocol.h  server.c
src/MultiTcpClient/: CMakeLists.txt  client_nr.c  protocol.h  server.c
src/NameResolution/: CMakeLists.txt  name_resolution.c
src/SimpleBroadcast/: CMakeLists.txt  protocol.h  receiver.c  sender.c
src/SimpleMcast/: receiver.c  sender.c
src/SimpleMulticast/: CMakeLists.txt  protocol.h  receiver.c  receiver_oldapi.c  sender.c
src/SimpleTcp/: CMakeLists.txt  client.c  client_nr.c  client_nr0.c  server.c  server_ipv6.c
src/SimpleUdp/: CMakeLists.txt  receiver.c  sender.c  sender_nr.c  sender_nr0.c
src/TcpFileTransfer/: CMakeLists.txt  client.c  client_nr.c  protocol.h  server.c
src/UdpFileTransfer/: CMakeLists.txt  protocol.h  receiver.c  sender.c  sender_nr.c
